# wire-size

./: README.md  pyproject.toml
wire-size/: cmd.py
wire-size/provider/: __init__.py  digitalocean.py  provider.py
wire_size/: cmd.py
wire_size/downloader/: __init__.py  downloader.py  multi_downloader.py  single_downloader.py  utils.py
wire_size/provider/: __init__.py  digitalocean.py  provider.py
