[tool.pdm]

[project]
name = "wire-size"
version = "0.1.0"
description = "Test bandwidth to cloud provider endpoint."
authors = [
    {name = "Zxilly", email = "zxilly@outlook.com"},
]
dependencies = [
    "requests>=2.28.1",
    "click>=8.1.3",
    "tqdm>=4.64.1",
    "prettytable>=3.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
